--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask-sqlalchemy = "^3.1.1"
 flask-login = "^0.6.3"
 networkx = "^3.3"
 psycopg2-binary = "^2.9.9"
+requests = "^2.32.3"
 
 
 [build-system]
