--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ flask-login = "^0.6.3"
 networkx = "^3.3"
 psycopg2-binary = "^2.9.9"
 requests = "^2.32.3"
-openai = "^1.45.0"
+openai = "1.3.5"
 
 
 [build-system]
